# wgpu-media-player

./: .gitignore  .gitmodules  Cargo.toml  readme.md
src/: app.rs  main.rs  media_decoder.rs  renderer.rs  shader.wgsl  texture.rs
