[package]
name = "wgplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytemuck = { version = "1.13.0", features = ["derive"] }
crossbeam-channel = "0.5.6"
image = "0.24.5"
pollster = "0.3.0"
rodio = { version = "0.16.0", features = ["symphonia", "symphonia-all"] }
rusty_ffmpeg = "0.10.0"
wgpu = "0.15.1"
winit = "0.28.1"
