[package]
name = "wgpu-media-player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bytemuck = { version = "1.13.0", features = ["derive"] }
crossbeam-channel = "0.5.6"
image = "0.24.5"
pollster = "0.3.0"
rodio = { version = "0.16.0", features = ["symphonia", "symphonia-all"] }
stainless_ffmpeg = "0.3.5"
wgpu = "0.15.1"
winit = "0.28.1"
