[package]
name = "wgpu-media-player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
bytemuck = { version = "1.13.0", features = ["derive"] }
cpal = "0.15.0"
crossbeam-channel = "0.5.6"
image = "0.24.5"
pollster = "0.3.0"
stainless_ffmpeg = "0.3.5"
wgpu = "0.15.1"
winit = "0.28.1"
ringbuf = "0.3.2"
spin_sleep = "1.1.1"
